# hello-wasm-cli

./: .gitignore  Cargo.toml  README.md
crates/greet/: Cargo.toml
crates/greet/src/: lib.rs
crates/greet/wit/: world.wit
crates/name-impl/: Cargo.toml
crates/name-impl/src/: lib.rs
interfaces/hello-wasi/: wit.toml  world.wit
interfaces/hello-world/: world.wit
interfaces/hello-world-cli/: wit.toml  world.wit
interfaces/name/: name.wasm  world.wit
src/: main.rs
