workspace = { members = ["crates/greet", "crates/name-impl"] }
[package]
name = "hello-wasi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[package.metadata.component]
package = "chikoski:hello-wasi-cli"
target = "chikoski:hello-wasi@0.1.0"


[package.metadata.component.dependencies]

